<resources>
    <string name="app_name">Cryptaur Lottery</string>
    <string name="action_settings">Settings</string>
    <string name="prize_pool">PRIZE POOL</string>
    <string name="jackpot">JACKPOT</string>
    <string name="cpt">CPT</string>
    <string name="draw_number">DRAW #%d</string>
    <string name="buy_ticket_for">Buy ticket for %s CPT</string>
    <string name="time_left_">TIME LEFT %s</string>
    <string name="_CPT" translatable="false">%s CPT</string>
    <string name="title_activity_my_tickets">MyTicketsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="active">Active</string>
    <string name="played">Played</string>
    <string name="won_cpt">WON %s CPT</string>
    <string name="draw_in_progress">draw is in progress</string>
    <string name="your_total_win">Your total win</string>
    <string name="get_the_win">Get the win</string>
    <string name="title_activity_buy_ticket">BuyTicketActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="buy_for__cpt">Buy for %s CPT</string>
    <string name="available__cpt">Available %s CPT</string>
    <string name="select_d_numbers">select %d numbers</string>
    <string name="clear">clear</string>

    <string name="exit">Exit</string>
    <string name="inputLogin">Input login</string>
    <string name="inputPassword">Input password</string>
    <string name="createPinCode">Please, create PIN-code</string>
    <string name="repeatPinCode">Please, repeat PIN-code</string>
    <string name="enter_your_pin_code_to_login">Enter your PIN-code\nto login</string>
    <string name="updatingTicketFee">Updating ticket fee</string>
    <string name="updatingAmountAndFee">Updating amount and fee</string>
    <string name="errorUpdatingTicketFee">Error updating ticket fee</string>
    <string name="boughtTicket">Buy ticket transaction in progress. It will take some time.</string>
    <string name="requestError">Request error</string>
    <string name="requestCancelled">Request cancelled</string>
    <string name="executingGetTheWinRequest">Executing Get the win request. It will take some time to process.</string>
    <string name="ticket">Ticket</string>
    <string name="draw_archive">Draw Archive</string>
    <string name="rules">Rules</string>
    <string name="numbers_guessed">numbers guessed: %d</string>
    <string name="win_cpt">Win %s CPT</string>
    <string name="winners">Winners</string>
    <string name="drawDetails">LOTTERY\nDRAW\nDATE\nWIN NUMBERS\nTICKETS\nCOLLECTED\nPAID\nTO JACKPOT\nTO RESERVE\nJACKPOT\nRESERVE</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="my_tickets">my tickets</string>
    <string name="change_pin_code">Change pin-code</string>
    <string name="how_to_play">How to play</string>

    <!-- RULES -->
    <string name="participation">Participation</string>
    <string name="participate_body">To participate in the lottery, you must choose any %d numbers out of %d in the playing field of the lottery ticket. The number of tickets is unlimited.</string>
    <string name="ticket_price">Ticket price</string>
    <string name="ticket_price_body">The cost of one ticket is determined by the lottery organizer and can be changed. Changes are allowed only after the end of the current drawing lot and before the next one. The ticket is paid by CPT tokens. The cost of GAS for the implementation of a transaction for the ticket purchase is not included in the ticket price and is debited from the participant`s wallet, i. e. the participant should have enough ETH in the wallet for the ticket purchase. The cost of GAS can vary depending on the workload of the network Ethereum. The purchased tickets cannot be exchanged and returned.</string>
    <string name="distribution_of_funds">Distribution of funds from ticket sales</string>
    <string name="distribution_of_funds_body">The funds raised from ticket sale in the current drawing lot are distributed as follows: 90% of the funds form the prize pool of the current draw; 10% of the funds - advertising, marketing, legal expenses, holding rallies.</string>
    <string name="distribution_of_the_prize_pool">Distribution of the prize pool</string>
    <string name="distribution_of_the_prize_pool_body1">The prize pool of the current drawing lot is divided into %d categories depending on the number of guessed numbers.</string>
    <string name="distribution_of_the_prize_pool_body2">If there are no winners the sum goes to the Jackpot of the next draw.</string>
    <string name="distribution_of_the_prize_pool_body3">50%% of the prize pool of category %d always goes to the Jackpot of the next draw.</string>
    <string name="distribution_of_the_prize_pool_body4">The jackpot, accumulated over previous draws, divides tickets among themselves, in which %d numbers are guessed. If there are none the current jackpot amount is added to the next drawdown Jackpot.</string>
    <string name="distribution_of_the_prize_pool_body5">The minimum guaranteed %d out of %d lottery jackpot is determined by the lottery organizer and can be changed. Changes are allowed only after the end of the current draw and before the next one.</string>
    <string name="distribution_of_the_prize_pool_body6">In case the Jackpot won is less than the minimum jackpot amount, the required balance is taken from the reserve fund. After that all the funds intended for replenishment of the Jackpot of the following drawing lots go first to repay the amount taken from the reserve fund. The reserve fund initially accumulates at the expense of fees to the Jackpot, as well as at the expense of funds contributed by the lottery organizer.</string>
    <string name="draw">Draw</string>
    <string name="draw_body">The lottery is held every 154 hours. The time of the nearest draw is indicated in the lottery ticket. Ticket sale for draw ends 1 hour before its start.</string>
    <string name="payout">Payout</string>
    <string name="payout_body1">After the draw the system automatically determines winning tickets. The owner of the winning ticket should apply for a win before the next draw, otherwise the ticket is cancelled. The winner of the lottery shall pay the gas for getting the win.</string>
    <string name="payout_body2">The lottery organizer is responsible for lottery costs.</string>
    <string name="taxes">Taxes</string>
    <string name="taxes_body">The Cryptaur project does not act as a tax agent. The duty to pay taxes rests with the owner of the cryptowallet where the payout was made.</string>
    <string name="agreement">Agreement</string>
    <string name="agreement_body">Taking part in the lottery, you agree with the rules of its conduct. You guarantee that at the time of purchasing a lottery ticket you turned 18 or you have reached another minimum age required to participate in the lottery provided for by the law of the country of your permanent residence.</string>
    <string name="numbers_matched">Numbers Matched</string>
    <string name="prize_pool_distribution">Prize pool distribution</string>
    <string name="jackpot2">Jackpot</string>
    <string name="distributionExpl">%d%% of the prize pool of the draw / number of people who guessed %d numbers</string>
    <!-- END RULES -->

    <!-- How to play -->
    <string name="rules_of_ticket_purchase">Rules of ticket purchase</string>
    <string name="rules_of_ticket_purchase_body" formatted="false">Choose a lottery, fill it in and buy a ticket.
\n\nThe number of tickets that can be bought is unlimited.
\n\nOne hour before the drawing the tickets purchase for this edition is suspended.
\n\nTo view the statistics on purchased tickets, you need to enter the number of the cryptowallet from which you bought the tickets in section "My Tickets".</string>
    <string name="time_of_drawing_lots">Time of drawing lots</string>
    <string name="time_of_drawing_lots_body">Drawing lots are held every 154 hours. The remaining time until the next lottery is indicated in the form of a countdown timer in each draw.</string>
    <string name="rules_draw_body">Each draw has its own unique serial number (identifier), according to which it can be found in the \"Statistics\" section.</string>
    <string name="lottery_broadcasting">Lottery broadcasting</string>
    <string name="lottery_broadcasting_body">Lottery broadcasting (numbers come up) can be viewed by going to the section of the desired lottery during the period when the countdown timer has reset.</string>
    <string name="how_to_check">How to check the ticket and get a win</string>
    <string name="how_to_check_body">After the drawing the system automatically determines winning tickets. The winner of the lottery is responsible for the cost of GAS for getting wins.
\n\nThe lottery organizer is responsible for the lottery costs.
\n\nThe history of all drawing lots and payments made can be found in the "Statistics" section of each lottery.
\n\nYou can check your winning tickets in section "My Tickets" by entering the number of the cryptowallet from which the lottery tickets were paid.</string>
    <!-- END HowToPlay -->

    <string name="error">Error</string>
    <string name="buy_ticket_includes_fee">Buying ticket includes transaction fee.</string>
    <string name="you_need">You need approx.</string>
    <string name="cpt_to_buy">CPT to buy ticket</string>
    <string name="errorLoggingIn">Error logging in. Please, try again.</string>
    <string name="networkError">Error connecting to the server. Please, check your Internet connection and try again.</string>
    <string name="your_wallet_doesnt_have_enough_cpt">Your wallet doesn\'t have enough CPT to buy a ticket. Click here to go to the Cryptaur wallet.</string>
    <string name="failedToByTicket">Failed to buy ticket for draw</string>
    <string name="lottery">lottery</string>
    <string name="numbers">Numbers:</string>
    <string name="failedToGetTheWin">Failed to Get the Win transaction for</string>
    <string name="pleaseTryAgain">Please, try again</string>
    <string name="transactionfailed">Transaction failed</string>
    <string name="pending_transaction">PENDING\nTRANSACTION</string>
    <string name="addressCopied">Address copied to clipboard</string>

    <string name="ticketSaleIsOver">Ticket sale of draw %d is over</string>
    <string name="playing">Playing</string>


    <plurals name="d_days">
        <item quantity="one">%d day</item>
        <item quantity="two">%d days</item>
        <item quantity="few">%d days</item>
        <item quantity="many">%d days</item>
        <item quantity="zero">%d days</item>
    </plurals>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="retry">Retry</string>

</resources>
