<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dialog.MenuDialogFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/bubbles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/rulesHeader1"
                style="@style/AppTheme.HowToPlayHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rules_of_ticket_purchase" />

            <TextView
                style="@style/AppTheme.HowToPlayBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rules_of_ticket_purchase_body" />

            <TextView
                android:id="@+id/rulesHeader2"
                style="@style/AppTheme.HowToPlayHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_of_drawing_lots" />

            <TextView
                style="@style/AppTheme.HowToPlayBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_of_drawing_lots_body" />

            <TextView
                android:id="@+id/rulesHeader3"
                style="@style/AppTheme.HowToPlayHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/draw" />

            <TextView
                style="@style/AppTheme.HowToPlayBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rules_draw_body" />

            <TextView
                android:id="@+id/rulesHeader4"
                style="@style/AppTheme.HowToPlayHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lottery_broadcasting" />

            <TextView
                style="@style/AppTheme.HowToPlayBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lottery_broadcasting_body" />

            <TextView
                android:id="@+id/rulesHeader5"
                style="@style/AppTheme.HowToPlayHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_check" />

            <TextView
                style="@style/AppTheme.HowToPlayBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_to_check_body" />

        </LinearLayout>
    </ScrollView>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/closeButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="right"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/btn_transp_primary"
        android:scaleType="center"
        app:srcCompat="@drawable/ic_menu_close" />

</FrameLayout>