<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/selectNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/select_d_numbers"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:background="@drawable/btn_transp_accented"
        android:text="@string/clear"
        app:layout_constraintBaseline_toBaselineOf="@+id/selectNumbers"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list"
        android:name="com.cryptaur.lottery.buytickets.BuyTicketFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layoutManager="android.support.v7.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/spacer"
        app:layout_constraintTop_toBottomOf="@+id/buttonClear"
        tools:context=".buytickets.BuyTicketFragment"
        tools:listitem="@layout/view_ticket_number" />

    <View
        android:id="@+id/spacer"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:background="@color/paleGray"
        app:layout_constraintBottom_toTopOf="@+id/availableText" />

    <TextView
        android:id="@+id/availableText"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginBottom="14dp"
        android:layout_marginTop="24dp"
        android:text="@string/available__cpt"
        android:textAllCaps="true"
        android:textColor="@color/heather"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/buyButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/buyButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/bg_buy_button"
        android:enabled="false"
        android:text="@string/buy_for__cpt"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_max="320dp" />

</android.support.constraint.ConstraintLayout>
